# pycookiecheat

./: README.md  setup.cfg  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
src/pycookiecheat/: pycookiecheat.py
tests/: test_pycookiecheat.py
