[metadata]
name = pycookiecheat
url = https://github.com/n8henrie/pycookiecheat
version = attr: pycookiecheat.__version__
license = MIT
license_files = LICENCE
description = Borrow cookies from your browser's authenticated session for use in Python scripts.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Nathan Henrie
author_email = nate@n8henrie.com
keywords = pycookiecheat chrome chromium cookies
classifiers=
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir=
    =src
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    cryptography==38.0.4
    keyring==23.0.0

[options.extras_require]
test =
    mypy==1.0.1
    pep8-naming==0.11.1
    playwright==1.14.1
    pycodestyle==2.6.0
    pytest==7.1.3
    tox==3.23.0
dev =
    build==0.6.0.post1
    twine==3.4.2
    wheel==0.37.0

[options.packages.find]
where=src
